updating handlebars with nav links.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tech Blog</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    <link rel="stylesheet" href="/css/style.css">
 </head>
+
+<main>
+    {{{body}}}
+
+    <div class="navbar">
+        <ul>
+            <li class="line-item">Home</li>]
+            <li class="line-item">Login</li>
+            <li class="line-item">Sign Out</li>
+        </ul>
+    </div>
+</main>
+
 <body>
     {{{body}}}
 </body>
+
 </html>
