--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
   <div class="card-body">
     <h5 class="card-title">{{post.user_id}}</h5>
     <p class="card-text">{{post.content}}</p>
-    <a href="#" class="btn btn-primary">comment</a>
+    <a href="#" class="btn btn-primary">Comment</a>
        {{#each post.postComments as |comment|}}
    
   <div class="card-body">
