updating handlebars to match errors.

--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -9,23 +9,21 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body class="flex-column min-100-vh">
+<body class="flex-column">
   <nav class="navbar">
-    <ul class="flex-row">
-      <li class="li-inline nav-item"><a href="/">Home</a></li>
-      <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
-      <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
-    </ul>
+    <h1 class="title"><a href="/dashboard">Dashboard</a></h1>
+      <ul class="flex-row">
+        <li class="li-inline nav-item"><a href="/">Home</a></li>
+        <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
+        <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
+      </ul>
   </nav>
-  <header class="hero">
-    <h1 class="app-title"><a href="/dashboard">Dashboard</a></h1>
-  </header>
 
   <main class="col-auto">
     {{{body}}}
   </main>
 
-  <footer class="footer flex-row justify-center">
+  <footer class="footer justify-center">
     <a href="/dashboard/new">➕ New Post</a>
   </footer>
 </body>
