--- a/views/all-posts-admin.handlebars
+++ b/views/all-posts-admin.handlebars
@@ -1,6 +1,6 @@
-<div class="posts list-group">
+<div class="all-posts">
   {{#each posts}}
-    <a class="list-item flex-row justify-space-between" href="/dashboard/edit/{{id}}">
+    <a class="list-item-post" href="/dashboard/edit/{{id}}">
       <span>{{title}}</span>
       <span>{{format_date createdAt}}</span>
     </a>
