--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
         </ul>
     </div>
     <header>
-        <h1 class="app-title"><a href="/">Your Blog Daily</a></h1>
+        <h1 class="title"><a href="/">Your Blog Daily</a></h1>
     </header>
 </main>
 
