trying to fix error on not loading links.

--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -23,7 +23,7 @@
     {{{body}}}
   </main>
 
-  <footer class="footer justify-center">
+  <footer class="footer">
     <a href="/dashboard/new">➕ New Post</a>
   </footer>
 </body>
