--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,25 +65,35 @@
   .card-header h4 {
     color: var(--background);
   }
+
+  .card {
+    margin: 10px;
+    border: solid;
+    border-radius: var(--dark);
+  }
+  
+  .card-header {
+    color: var(--light);
+    background-color: var(--dark);
+    padding: 10%;
+  }
+  
+  .card-body {
+    padding: 5px;
+  }
   
   .btn {
-    font-size: 1.3rem;
-    text-decoration: none;
-    padding: 6px 5px;
+    font-size: 16px;
     width: 100%;
     display: block;
-    margin: 5px 0;
+    margin: 5px;
     color: var(--font);
-    border: none;
-    outline: none;
     background-color: var(--dark);
   }
   
   .btn:hover {
-    color: var(--primary);
-    background-color: var(--tertiary);
-    transform: translate(0, 0);
-    box-shadow: 2px 2px var(--dark);
+    color: var(--light);
+    background-color: var(--dark);
   }
   
   .btn-inline {
@@ -106,4 +116,8 @@
   
   .nav-item a {
     color: var(--light);
+  }
+
+  .footer {
+    text-align: center;
   }
