--- a/views/all-posts.handlebars
+++ b/views/all-posts.handlebars
@@ -3,7 +3,7 @@
   <article class="card">
     <div class="card-header">
       <h2>
-        <a href="/post/{{id}}">{{title}}</a>
+        <a href="/posts/{{id}}">{{title}}</a>
       </h2>
       <div>
         Posted by {{User.username}} on {{format_date createdAt}}
